--- a/index.html
+++ b/index.html
@@ -122,12 +122,22 @@
   <li><h5>The hidden influence of communities in collaborative funding of clinical science</h5></li>
     <ul>
         <li id ="authornames"> <b>Kishore Vasan</b> and Jevin West</li>
-        <li> Under Review: Royal Society Open Science </li>
+        <li> Royal Society Open Science </li>
         <li> Also presented at NetSci-X 2020 conference in Tokyo, Japan.</li>
+        <li> [<a href="https://royalsocietypublishing.org/doi/10.1098/rsos.210072" target="_blank">Link </a>]</li>
     </ul>
 </ul>
 
 <h4 id ="pubsection"> <u>Conference Proceedings </u></h4>
+
+<ul>
+  <li><h5>SciSight: Combining faceted navigation and research group detection for COVID-19 exploratory scientific search</h5></li>
+    <ul>
+        <li id ="authornames"> Tom Hope, Jason Portenoy*, <b>Kishore Vasan</b>*, Jonathon Borchardt*, Eric Horvitz, Daniel Weld, Marti Hearst, Jevin West </li>
+        <li> EMNLP Demo track.</li>
+        <li> [<a href="https://arxiv.org/pdf/2005.12668.pdf" target="_blank">Link</a>]</li>
+    </ul>
+</ul>
 
 <ul>
   <li><h5>Is Together Better? Examining scientific collaboration across multiple authors, departments, and institutions.</h5></li>
@@ -144,18 +154,6 @@
         <li id ="authornames"><b> Kishore Vasan</b> and Jevin West</li>
         <li> iConference 2019 as a poster. Washington, DC.</li>
         <li> [<a href="https://arxiv.org/pdf/1812.03249.pdf" target="_blank">Link</a>]</li>
-    </ul>
-</ul>
-
-
-<h4 id ="pubsection"> <u>PrePrint Papers </u></h4>
-
-<ul>
-  <li><h5>SciSight: Combining faceted navigation and research group detection for COVID-19 exploratory scientific search</h5></li>
-    <ul>
-        <li id ="authornames"> Tom Hope, Jason Portenoy*, <b>Kishore Vasan</b>*, Jonathon Borchardt*, Eric Horvitz, Daniel Weld, Marti Hearst, Jevin West </li>
-        <li> Also accepted to EMNLP Demo track.</li>
-        <li> [<a href="https://arxiv.org/pdf/2005.12668.pdf" target="_blank">Link</a>]</li>
     </ul>
 </ul>
 
