--- a/artist-net-3d/index.html
+++ b/artist-net-3d/index.html
@@ -4,30 +4,30 @@
   <meta charset="utf-8">
   <title>My first three.js app</title>
   <style>
-      body { margin: 0; overflow: hidden}
+      body { margin: 0; overflow: hidden;}
   </style>
 </head>
 <body>
   <div id="3d-graph"> </div>
-  <div style="position: absolute; top: 5px; left: 5px; color:white; font-size:20px">
+  <div style="position: absolute; top: 5px; left: 5px; color:black; font-size:20px">
     <h2>Artist Social Network</h2>
     <p>Nodes: Artists, Links: Invites</p>
     <p>Red indicates new artist/ invite.</p>
     <p>Nodes are sized based on number of art sold.</p>
     <p>Clicking on the node leads to the artist's page.</p>
 </div>
-  <div style="position: absolute; top: 5px; right: 5px; color:white; font-size:20px" onload="myFunction()">
+  <div style="position: absolute; top: 5px; right: 5px; color:black; font-size:20px" onload="myFunction()">
       <h3>Date: <span id='myText'></span></h3>
+      <h3>Time since launch: <span id='myText2'></span></h3>
       <button id="animationToggle" style="margin: 8px; height: 25px; width: 150px;">
       Pause Animation
     </button>
   </div>
-
-<script src="//unpkg.com/three"></script>
+  <script src="//unpkg.com/d3-force-3d"></script>
+  <script src="//unpkg.com/three"></script>
   <script src="//unpkg.com/3d-force-graph"></script>
   <script src="./data/artist_net_static.js"></script>
   <script src="sketch_force3d.js"></script>
-
 </body>
 
 </html>
