--- a/artist-net-3d/index.html
+++ b/artist-net-3d/index.html
@@ -8,7 +8,6 @@
   </style>
 </head>
 <body>
-  <a id="downloadAnchorElem" style="display:none"></a>
   <div id="3d-graph"> </div>
   <div style="position: absolute; top: 5px; left: 5px; color:black; font-size:20px">
     <h2>Artist Social Network</h2>
@@ -31,9 +30,12 @@
     <br>
     <input type="checkbox" id="finalStage" value="1"> Skip to final network
   </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
   <script src="three.js"></script>
   <script src="//unpkg.com/3d-force-graph"></script>
-  <script src="./data/artist_net_static_single.js"></script>
   <script src="sketch_force3d_og.js"></script>
 </body>
 
