update crypto art website

--- a/index.html
+++ b/index.html
@@ -116,43 +116,52 @@
   <h3 class="w3-center">PUBLICATIONS</h3>
 </div>
 
-<h4 id ="pubsection"><u> Journal Publications </u></h4>
+<h3 class ="pubsection"><u> Journal Publications </u></h3>
 
 <ul>
-  <li><h5>The hidden influence of communities in collaborative funding of clinical science</h5></li>
-    <ul>
-        <li id ="authornames"> <b>Kishore Vasan</b> and Jevin West</li>
+  <li><h4>Quantifying NFT-driven networks in crypto art</h4></li>
+    <ul class ="authornames">
+        <li > <u>Kishore Vasan</u>, Milán Janosov, and Albert-László Barabási</li>
+        <li> Scientific Reports </li>
+        <li> [<a href="https://www.nature.com/articles/s41598-022-05146-6" target="_blank">Link </a>]</li>
+    </ul>
+</ul>
+
+<ul>
+  <li><h4>The hidden influence of communities in collaborative funding of clinical science</h4></li>
+    <ul class ="authornames">
+        <li> <u>Kishore Vasan</u> and Jevin West</li>
         <li> Royal Society Open Science </li>
         <li> Also presented at NetSci-X 2020 conference in Tokyo, Japan.</li>
         <li> [<a href="https://royalsocietypublishing.org/doi/10.1098/rsos.210072" target="_blank">Link </a>]</li>
     </ul>
 </ul>
 
-<h4 id ="pubsection"> <u>Conference Proceedings </u></h4>
+<h3 class ="pubsection"> <u>Conference Proceedings </u></h3>
 
 <ul>
-  <li><h5>SciSight: Combining faceted navigation and research group detection for COVID-19 exploratory scientific search</h5></li>
-    <ul>
-        <li id ="authornames"> Tom Hope, Jason Portenoy*, <b>Kishore Vasan</b>*, Jonathon Borchardt*, Eric Horvitz, Daniel Weld, Marti Hearst, Jevin West </li>
+  <li><h4>SciSight: Combining faceted navigation and research group detection for COVID-19 exploratory scientific search</h4></li>
+    <ul class ="authornames">
+        <li> Tom Hope, Jason Portenoy*, <u>Kishore Vasan</u>*, Jonathon Borchardt*, Eric Horvitz, Daniel Weld, Marti Hearst, Jevin West </li>
         <li> EMNLP Demo track.</li>
         <li> [<a href="https://arxiv.org/pdf/2005.12668.pdf" target="_blank">Link</a>]</li>
     </ul>
 </ul>
 
 <ul>
-  <li><h5>Is Together Better? Examining scientific collaboration across multiple authors, departments, and institutions.</h5></li>
-    <ul>
-        <li id ="authornames">Lovenoor Aulck, <b> Kishore Vasan</b>, Jevin West</li>
+  <li><h4>Is Together Better? Examining scientific collaboration across multiple authors, departments, and institutions.</h4></li>
+    <ul class ="authornames">
+        <li>Lovenoor Aulck, <u> Kishore Vasan</u>, Jevin West</li>
         <li> KDD 2018: BigScholar Workshop. London, UK. </li>
         <li> [<a href="https://arxiv.org/pdf/1809.04093.pdf" target="_blank">Link</a>]</li>
     </ul>
 </ul>
 
 <ul>
-  <li><h5>Measuring scientific buzz.</h5></li>
-    <ul>
-        <li id ="authornames"><b> Kishore Vasan</b> and Jevin West</li>
-        <li> iConference 2019 as a poster. Washington, DC.</li>
+  <li><h4>Measuring scientific buzz.</h4></li>
+    <ul class ="authornames">
+        <li><u> Kishore Vasan</u> and Jevin West</li>
+        <li> iConference 2019. Washington, DC.</li>
         <li> [<a href="https://arxiv.org/pdf/1812.03249.pdf" target="_blank">Link</a>]</li>
     </ul>
 </ul>
@@ -168,6 +177,11 @@
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
+      <img src="images/projects/artist-social-net.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Crypto Art">
+      <p> <i> <a href="https://kishorevasan.github.io/artist-net-3d" target="_blank">NFT social network</a> </i></p>
+    </div>
+
+    <div class="w3-col m3">
       <img src="images/projects/covid_network.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="COVID Collaboration Network">
       <p> <i> <a href="http://scisight.apps.allenai.org/" target="_blank">COVID Network of Science</a> </i></p>
     </div>
@@ -181,14 +195,14 @@
       <img src="images/projects/wiki_talk.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Wiki Talk Network">
       <p><i> <a href="https://github.com/kishorevasan/wikitalk-network-analysis" target="_blank">Wiki Talk Network Analysis</a></i></p>
     </div>
+  </div>
 
+  <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
       <img src="images/projects/the-food-rise.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Comparing different food security variables">
       <p><i><a href="https://simran18.shinyapps.io/the-food-rise" target="_blank"> Food Security in America</a></i></p>
     </div>
-  </div>
 
-  <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
       <img id="img101" src="images/projects/3dviz.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Child Mortality and Vaccination">
       <p><i><a href="https://kishorevasan.shinyapps.io/child_mortality_and_vaccinations/" target="_blank">Child Mortality and Vaccinations</a></i></p>
@@ -199,10 +213,10 @@
       <p><i><a href="https://github.com/kishorevasan/trump-tweet-forex-impact" target="_blank">Do Trump's tweets affect currency exchange rate?</a></i></p>
     </div>
 
-    <div class="w3-col m3">
+    <!--div class="w3-col m3">
       <img src="images/projects/spotify-car-player.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Voice assistant for Spotify">
       <p><i><a href="https://spotifyplayer.readthedocs.io/en/latest/" target="_blank"> Voice assistant for Spotify </a></i></p>
-    </div>
+    </div-->
 
     <div class="w3-col m3">
       <img src="images/projects/voice.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Designed a tool to detect emotion through voice">
