update about me

--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
 <div class="w3-light-grey">
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-32" id="about">
-  <h3 class="w3-center">ABOUT ME</h3>
-  <p class="w3-center"><em>Think Networks</em></p>
-  <p>I am a PhD student in Network Science at the Network Science Institute at Northeastern University. I work at the Center for Complex Networks Research, advised by Albert-László Barabási. </p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Kishore Vasan</b></p><br>
@@ -74,9 +71,26 @@
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p><b> Research Motivation.</b> Scientists yearn to receive huge grants for long periods of time. It enables researchers to purue the projects of their interest and is a key component for academic growth. Research funding is critical because it provides monetary support to hire associates, buy equipments, travel to present their research, all of which contitutes <i>research work</i>. However, much is still unknown about the dynamics that govern the scientific funding process. How do funders decide to fund specific scientists? Is the grant successful in delivering the desired targets? As a funder, what areas should I fund and importantly, who should I fund with? Answering these questions using machine learning, network science, and computational methods will help discern key dynamics that determine and <i>over-shadow</i> much of the science that we do. At a broad level, my research work focusses on measuring the success of funding models through grants and publications. </p>
+      <h3 class="w3-center">ABOUT ME</h3>
+      <p class="w3-center"><em>Think Networks</em></p>
+      <p>I am a PhD student in Network Science at the Network Science Institute at Northeastern University. I work at the Center for Complex Networks Research, advised by Albert-László Barabási. </p>
+      <p><b><u> Inner research voice.</u></b> Society comprises of various complex systems, ranging at different scales, from flight transfer systems to protein interactions in the cells, working in synchrony to govern our way of life, for example, disease spreading across and within humans.</p>
     </div>
   </div>
+
+  <div class="w3-row">
+      <p>My research interests broadly encompasses:</p>
+    <div class='w3-col m6 w3-hide-small w3-padding-large'>
+      <p>
+      <b> <u>Networks in the virtual world. </u></b> Blockchain is a neat system, enabling millions of transactions, both fungible, comprising of digital currency, and non-fungible, consisting of collectibles like crypto art. The evolution of these two forms of digital trading has led to the creation of virtual worlds, also known as <em>metaverse</em>, where humans create avatars, construct buildings, hold concerts, just like the real world. As these virtual systems become mainstream, understanding the role of networks within will be of utmost importance, from quantifying the social network of currency transfers to identifying theft on the blockchain.
+    </p>
+    </div>
+    <div class='w3-col m6 w3-hide-small w3-padding-large'>
+      <p>
+      <b> <u>Networks defining drug innovation.</u></b>
+        Clinical funding accounts for over $50 Billion in yearly investment from the NIH and pharmaceutical companies. Yet, the innovation has been rather limiting, creating several 'me-too' drugs that have similar indicators to other drugs on the market. I am curious here, what is the social effects limiting drug innovation? or is it truly the case that biological exploration has reached a stagnation. Identifying the patterns of new drug exploration, from the first clinical trial to the approval stage of a drug, will help discern the social factors, like risk-aversity, from the biological factors, like target selection.
+      </p>
+    </div>
 
 </div>
 
