--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
         <li > <u>Kishore Vasan</u>, Milán Janosov, and Albert-László Barabási</li>
         <li> Scientific Reports </li>
         <li> [<a href="https://www.nature.com/articles/s41598-022-05146-6" target="_blank">Link </a>]</li>
+        <li>Press Coverage</li>
+          <ul>
+            <li> <a href='https://news.artnet.com/news-pro/laws-of-nft-success-2082422' target='_blank'>Artnet News.</a> Want to Succeed as an NFT Artist? Here Are 5 Things to Know, According to a New Study of One of the Biggest Crypto-Art Platforms.
+          </ul>
     </ul>
 </ul>
 
@@ -159,6 +163,11 @@
         <li> Tom Hope, Jason Portenoy*, <u>Kishore Vasan</u>*, Jonathon Borchardt*, Eric Horvitz, Daniel Weld, Marti Hearst, Jevin West </li>
         <li> EMNLP Demo track.</li>
         <li> [<a href="https://arxiv.org/pdf/2005.12668.pdf" target="_blank">Link</a>]</li>
+        <li>Press Coverage</li>
+          <ul>
+            <li> <a href='https://www.science.org/content/article/scientists-are-drowning-covid-19-papers-can-new-tools-keep-them-afloat' target='_blank'>Science News.</a> Scientists are drowning in COVID-19 papers. Can new tools keep them afloat?</li>
+            <li><a href="https://www.nature.com/articles/d41586-020-01733-7" target = "_blank">Nature News.</a> Artificial-intelligence tools aim to tame the coronavirus literature.</li>
+          </ul>
     </ul>
 </ul>
 
