--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h3 class="w3-center">ABOUT ME</h3>
       <p class="w3-center"><em>Think Networks</em></p>
       <p>I am a PhD student in Network Science at the Network Science Institute at Northeastern University. I work at the Center for Complex Networks Research, advised by Albert-László Barabási. </p>
-      <p><b><u> Inner research voice.</u></b> Society comprises of various complex systems, ranging at different scales, from flight transfer systems to protein interactions in the cells, working in synchrony to govern our way of life, for example, disease spreading across and within humans.</p>
+      <p><b><u> Inner research voice:</u></b> Society comprises of various complex systems, ranging at different scales, from flight transfer systems to protein interactions in the cells, working in synchrony to govern our way of life, for example, disease spreading across and within humans.</p>
     </div>
   </div>
 
