--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
 
-<!-- Global site tag (gtag.js) - Google Analytics >
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128379326-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -26,7 +26,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-128379326-1');
-</script-->
+</script>
 </head>
 
 <body>
