--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128379326-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YBG6QEP05B"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-128379326-1');
+  gtag('config', 'G-YBG6QEP05B');
 </script>
 </head>
 
