--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
 <h3 class ="pubsection"><u> Journal Publications </u></h3>
 
 <ul>
+  <li><h4>The Clinical Trials Puzzle: How Network Effects Limit Drug Discovery</h4></li>
+    <ul class ="authornames">
+        <li > <u>Kishore Vasan</u>, Deisy Gysi, and Albert-László Barabási</li>
+        <li> Cell iScience </li>
+        <li> [<a href="https://www.cell.com/iscience/fulltext/S2589-0042(23)02438-0" target="_blank">Link </a>]</li>
+    </ul>
+</ul>
+
+<ul>
   <li><h4>Quantifying NFT-driven networks in crypto art</h4></li>
     <ul class ="authornames">
         <li > <u>Kishore Vasan</u>, Milán Janosov, and Albert-László Barabási</li>
