--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <h3 class="w3-center">ABOUT ME</h3>
       <p class="w3-center"><em>Think Networks</em></p>
-      <p>I am a PhD student in Network Science at the Network Science Institute at Northeastern University. I work at the Center for Complex Networks Research, advised by Albert-László Barabási. </p>
+      <p>I am a PhD Candidate at the Network Science Institute at Northeastern University. I work at the Center for Complex Networks Research, advised by Albert-László Barabási. </p>
       <p><b><u> Inner research voice:</u></b> Society comprises of various complex systems, ranging at different scales, from flight transfer systems to protein interactions in the cells, working in synchrony to govern our way of life, for example, disease spreading across and within humans.</p>
     </div>
   </div>
@@ -131,6 +131,14 @@
 </div>
 
 <h3 class ="pubsection"><u> Journal Publications </u></h3>
+<ul>
+  <li><h4>Human mobility in the metaverse</h4></li>
+    <ul class ="authornames">
+        <li > <u>Kishore Vasan</u>, Marton Karsái, and Albert-László Barabási</li>
+        <li> Under Review </li>
+        <li> [<a href="https://arxiv.org/abs/2404.03071" target="_blank">Link </a>]</li>
+    </ul>
+</ul>
 
 <ul>
   <li><h4>The Clinical Trials Puzzle: How Network Effects Limit Drug Discovery</h4></li>
@@ -212,8 +220,8 @@
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="images/projects/artist-social-net.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Crypto Art">
-      <p> <i> <a href="https://kishorevasan.github.io/artist-net-3d" target="_blank">NFT social network</a> </i></p>
+      <img src="images/projects/artist-net-pic.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Crypto Art">
+      <p> <i> <a href="https://www.dropbox.com/scl/fi/rbbzgxpkgsjwnlro0zrm6/artist-net-3d-final-fast.mp4?rlkey=my9fezil9nfcd2v9du9eibq3i&dl=0" target="_blank">NFT social network</a> </i></p>
     </div>
 
     <div class="w3-col m3">
