--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <h3 class="w3-center">ABOUT ME</h3>
       <p class="w3-center"><em>Think Networks</em></p>
-      <p>I am a PhD Candidate at the Network Science Institute at Northeastern University. I work at the Center for Complex Networks Research, advised by Albert-László Barabási. </p>
+      <p>I am a PhD Graduate at the Network Science Institute at Northeastern University. I work at the Center for Complex Networks Research, advised by Albert-László Barabási. </p>
       <p> My research explores how technology mediates <b><i>creativity, competition, and commerce</i></b>. For example, I study how emerging technologies such as blockchain, metaverse, and AI shape human behavior and decision making, and how to use this understanding to build social cohesion, drive innovation, and reduce social inequality. In broad strokes, my work takes a quantitative and big data perspective to recommend actionable real-world impact.</p>
 
       <p>The unifying theme of my work revolves around <b><i>leveraging networks</i></b> to deepen our understanding of societal dynamics and improve their functionality. In the field of science of science and innovation, I identify inefficiencies in drug discovery and develop strategies to optimize innovation within the clinical trials ecosystem. I also examine social networks and mobility patterns on the blockchain and the metaverse, advancing our understanding regarding the impact of digital technologies. Another flavor of my research focuses on social impact, for example, I investigate the effects of gender segregated spaces in intellectual domains on performance and outcomes.
