update tutorial ref

--- a/graph_llm_tutorial.html
+++ b/graph_llm_tutorial.html
@@ -749,6 +749,7 @@ And voila, we have successfully built <strong>TrialQuery</strong>, a LLM powered
   <li><a href='https://youtu.be/knDDGYHnnSI' target='_blank'>GraphRAG: The Marriage of Knowledge Graphs and RAG: Emil Eifrem</a></li>
   <li><a href='https://youtu.be/oynd7Xv2i9Y' target='_blank'> Deploying an OpenAI Streamlit app to AWS</a></li>
   <li> <a href='https://medium.com/neo4j/building-an-educational-chatbot-for-graphacademy-with-neo4j-f707c4ce311b' target='_blank'>Building an Educational Chatbot for GraphAcademy with Neo4j Using LLMs and Vector Search | by Adam Cowley</a>
+  <li><a href="https://youtu.be/uXz949I_H_I" target="_blank">Leveraging Knowledge Graphs for RAG: A Smarter Approach to Contextual AI Applications</li>
 </ul>
 </div>
 </body>
